fix(sds): make left menu button outline be visible again
OUI-2376

--- a/projects/sds/src/app/side-navigation/accordion-links/accordion-links.component.scss
+++ b/projects/sds/src/app/side-navigation/accordion-links/accordion-links.component.scss
@@ -58,7 +58,6 @@
 button {
 	background: transparent;
 	border: none;
-	outline: none;
 	box-sizing: content-box;
 	cursor: pointer;
 	position: relative;
